--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.15",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,7 +20,8 @@
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.1.1",
-    "sass": "^1.49.7"
+    "sass": "^1.49.7",
+    "typescript": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
