--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "netlify deploy -p",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -51,11 +49,10 @@
     "eslint": "^8.8.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
-    "netlify-cli": "^8.16.1",
     "prettier": "^2.5.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
-    "*.{js,jsx,ts,tsx,css,scss}": "prettier --write"
+    "*.{js,jsx,ts,tsx,css,scss,md}": "prettier --write"
   }
 }
