--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@types/node": "^17.0.15",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
+    "react-hot-toast": "^2.2.0",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
-    "react-toastify": "^8.1.1",
     "sass": "^1.49.7",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5"
   },
   "scripts": {
@@ -46,10 +49,16 @@
     ]
   },
   "devDependencies": {
+    "@types/react-places-autocomplete": "^7.2.9",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "eslint": "^8.8.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.3",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "stylelint": "^14.4.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.1.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
