--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-hot-toast": "^2.2.0",
+    "react-loader-spinner": "^5.1.2",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
